plugins { id 'java' }
group = 'com.example'
version = '1.0.0'

repositories {
    mavenCentral()
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT'
    compileOnly 'org.spigotmc:spigot-api:1.21.8-R0.1-SNAPSHOT'
    implementation 'com.google.code.gson:gson:2.10.1'
}

configurations.configureEach {
    resolutionStrategy.capabilitiesResolution.withCapability('org.spigotmc:spigot-api') {
        select('io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT')
    }
}

java { sourceCompatibility = JavaVersion.VERSION_21 }

jar {
    archiveFileName = 'GoAPI.jar'
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
}
